// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviewMapLink Test link to preview map with a bounding rectangle 1`] = `
<div>
  <div>
    <a
      href="https://search.earthdata.nasa.gov/search/map?sb=-40%2C10%2C50%2C70"
      rel="noopener noreferrer"
      target="_blank"
    >
      <i
        class="eui-icon eui-fa-globe"
      />
       
      Preview on Map
    </a>
  </div>
</div>
`;

exports[`PreviewMapLink Test link to preview map with a point 1`] = `
<div>
  <div>
    <a
      href="https://search.earthdata.nasa.gov/search/map?sp=10%2C20"
      rel="noopener noreferrer"
      target="_blank"
    >
      <i
        class="eui-icon eui-fa-globe"
      />
       
      Preview on Map
    </a>
  </div>
</div>
`;

exports[`PreviewMapLink Test link to preview map with a polygon 1`] = `
<div>
  <div>
    <a
      href="https://search.earthdata.nasa.gov/search/map?polygon=-30%2C50%2C10%2C40%2C35%2C50%2C-30%2C50"
      rel="noopener noreferrer"
      target="_blank"
    >
      <i
        class="eui-icon eui-fa-globe"
      />
       
      Preview on Map
    </a>
  </div>
</div>
`;
